--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 
         <div class="col-b">
           <img
-            src="./assets/enfermeira-laboratorio.png"
-            alt="mulher negra vestindo moletom verde e sorrindo"
+            src="./assets/tecnica-laboratorio-microscopio.jpg"
+            alt="tecnica-laboratorio-microscopio"
           />
         </div>
 
