--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         <div class="col-b">
           <img
-            src="./assets/tecnica-laboratorio-microscopio.jpg"
+            src="./assets/mulher-olhando-no-microscopio.png"
             alt="tecnica-laboratorio-microscopio"
           />
         </div>
